--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-fontawesome": "^1.6.8",
     "ajv": "^8.6.3",
     "ajv-keywords": "^5.1.0",
+    "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -51,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
