--- a/package.json
+++ b/package.json
@@ -12,22 +12,24 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.124",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/node": "^16.18.1",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/react-fontawesome": "^1.6.8",
-    "ajv": "^8.6.3",
+    "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3",
+    "i18next": "^21.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.8.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.83.4",
-    "typescript": "^4.9.5",
+    "typescript": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,7 +56,6 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
     "@types/react-scroll": "^1.8.10"
   }
