--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "washup-project",
+  "homepage": "https://elnaul99.github.io/3C-Cleaning/",
+  "name": "3c-cleaning",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -33,6 +34,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.10"
+    "@types/react-scroll": "^1.8.10",
+    "gh-pages": "^6.3.0"
   }
 }
