--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ELNAUL99.github.io/3C-Cleaning/",
+  "homepage": "",
   "name": "3c-cleaning",
   "version": "0.1.0",
   "private": true,
