--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://www.3ccleaning.fi/",
   "name": "3c-cleaning",
   "version": "0.1.0",
   "private": true,
